Kubernetes Essential Training Application Development/kube-ex/04/blue-ex.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"app":"blue-green"},"name":"blue","namespace":"default"},"spec":{"containers":[{"image":"docker.io/mtinside/blue-green:blue","name":"blue"}]}}
  creationTimestamp: "2022-05-03T20:18:37Z"
  labels:
    app: blue-green
  name: blue
  namespace: default
  resourceVersion: "14101"
  uid: a3e8d8b2-fedb-4b87-b959-9fc119f1f324
spec:
  containers:
  - image: docker.io/mtinside/blue-green:blue
    imagePullPolicy: IfNotPresent
    name: blue
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-bq8vr
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-bq8vr
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-05-03T20:18:37Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-05-03T20:18:40Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-05-03T20:18:40Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-05-03T20:18:37Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://0a3013cf2b8a300d7d8912764c5169e94cd5eac552f22f7228f2ce58217e109d
    image: mtinside/blue-green:blue
    imageID: docker-pullable://mtinside/blue-green@sha256:aef8bf76932ea6a461d3d669785af4fc4019d70448abd9df43a2da574cadb657
    lastState: {}
    name: blue
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-05-03T20:18:40Z"
  hostIP: 192.168.49.2
  phase: Running
  podIP: 172.17.0.7
  podIPs:
  - ip: 172.17.0.7
  qosClass: BestEffort
  startTime: "2022-05-03T20:18:37Z"
