Kubernetes Essential Training Application Development/kube-ex/04/blue-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: blue-green
